Improved jumbotron and information section

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,40 +17,31 @@
 <main>
     <section class="jumbotron">
         <div class="jumbotron-img-wrapper">
-            <img class="img-main" src="assets/images/cerro-ahuaca.jpg" alt="">
-            <img class="img-background" src="assets/images/background.svg" alt="">
         </div>
         <div class="jumbotron-content-wrapper">
             <h1>Gobierno Autonomo Decentralizado del Cantón Calvas</h1>
             <p>Trabajando por un mejor Calvas</p>
-            <div class="form-wrapper">
-                <form>
-                    <button class="more">Conocer más</button>
-                    <button class="about">Sobre nosotros</button>
-                </form>
-            </div>
         </div>
     </section>
     <section class="information">
         <h2>Información</h2>
         <div class="information-cards">
-            <div class="card">
+            <div class="card card-place">
                 <i class="fas fa-binoculars"></i>
                 <h3>Lugares Turisticos</h3>
                 <p>lorem ipsun dolor</p>
             </div>
-            <div class="card">
+            <div class="card card-schedule">
                 <i class="fas fa-clock"></i>
                 <h3>Horarios de recolección</h3>
                 <p>lorem ipsun dolor</p>
             </div>
-            <div class="card">
-                <!-- <img src="assets/images/tramites.jpg" alt=""> -->
+            <div class="card card-formalities">
                 <i class="fas fa-clipboard-list"></i>
                 <h3>Trámites</h3>
                 <p>Si desea realizar algún trámite, haga click para ir a la sección</p>
             </div>
-            <div class="card">
+            <div class="card card-events">
                 <i class="fas fa-calendar-day"></i>
                 <h3>Eventos</h3>
                 <p>lorem ipsun dolor</p>
