Added formalities functionality

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -15,6 +15,7 @@ h2 {
     font-size: 30px;
     text-transform: uppercase;
     position: relative;
+    color: $primary;
 }
 
 h2::before {
@@ -22,7 +23,7 @@ h2::before {
     position: absolute;
     width: 50px;
     height: 3px;
-    background-color: $dark;
+    background-color: $primary;
 }
 
 h2::after {
@@ -30,7 +31,7 @@ h2::after {
     position: absolute;
     width: 50px;
     height: 3px;
-    background-color: $dark;
+    background-color: $primary;
     bottom: -1px;
     transform: translateX(-50px);
 }
@@ -39,25 +40,127 @@ section {
     padding: 10px 0;
 }
 
+// nav
+nav {
+    display: flex;
+    flex-direction: row;
+    padding: 10px 30px;
+    background-color: $white;
+}
+
+.navbar-wrapper {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    margin-right: 20px;
+}
+
+.social-media {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.social-media a {
+    margin-right: 5px;
+    cursor: pointer;
+}
+
+.fa-facebook,
+.fa-twitter {
+    color: $primary;
+    font-size: 18px;
+}
+
+nav .logo {
+    width: 12%;
+}
+
+.logo img {
+    width: 100%;
+}
+
+.navbar-wrapper a {
+    padding: 10px 30px;
+    position: relative;
+    transition: background-color .3s;
+    color: $dark;
+    overflow: hidden;
+}
+
+.navbar-wrapper a:hover {
+    background-color: #eee;
+    color: #A61C3C;
+    background-size: cover;
+}
+
+a::before {
+    content: '';
+    position: absolute;
+    bottom: 0px;
+    z-index: 100;
+    width: 0%;
+    height: 2px;
+    background-color: $primary;
+    transition: width .5s;
+    transform: translateX(-30px);
+}
+
+a:hover::before {
+    content: '';
+    position: absolute;
+    bottom: 0px;
+    z-index: 100;
+    width: 100%;
+    height: 2px;
+    background-color: $primary;
+    transition: width .5s;
+    transform: translateX(-30px);
+}
+
+.social-media button {
+    background-color: transparent;
+    border: none;
+}
+
+// End nav
 // Jumbotron
 .jumbotron {
     background-size: cover;
     width: 100%;
-    height: 55vh;
+    height: 75vh;
     display: flex;
     position: relative;
     flex-direction: row;
     align-items: center;
-    background: linear-gradient(rgb(62 62 62 / 63%), rgb(62 62 62 / 63%)), url(../assets/images/cerro-ahuaca.jpg) top -400px left 0 no-repeat;
+    // background: linear-gradient(rgb(62 62 62 / 63%), rgb(62 62 62 / 63%)), url(../../assets/images/cerro-ahuaca.jpg) top -400px left 0 no-repeat;
     background-size: cover;
 }
 
 .jumbotron img {
-    border-radius: 10px;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    transform: scale(1.1);
+    animation: zoom 2s forwards;
+}
+
+@keyframes zoom {
+    0% {
+        transform: scale(1);
+    }
+    100% {
+        transform: scale(1.2);
+    }
 }
 
 .jumbotron-img-wrapper {
-    height: 55vh;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
 }
 
 img.img-main {
@@ -76,6 +179,7 @@ img.img-main {
     z-index: 100;
     padding: 20px;
     background-color: #a61c3c78;
+    mix-blend-mode: luminosity;
 }
 
 .jumbotron-content-wrapper h1 {
@@ -325,7 +429,7 @@ button.about {
 }
 
 .magic-content {
-    background: linear-gradient( rgba(39, 39, 61, 0.3), rgba(39, 39, 61, 0.3)), url('../assets/images/letras-cariamanga.jpg') top -135px left 0 no-repeat;
+    background: linear-gradient( rgba(39, 39, 61, 0.3), rgba(39, 39, 61, 0.3)), url('../../assets/images/letras-cariamanga.jpg') top -135px left 0 no-repeat;
     background-size: cover;
     height: 70vh;
     width: 80%;
