Added city hall module

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -23,7 +23,7 @@
             </div>
             <div class="card card-formalities" (click)="toFormalities()">
                 <i class="fas fa-clipboard-list"></i>
-                <h3>Trámites</h3>
+                <h3>Guia de Trámites</h3>
                 <p>Si desea realizar algún trámite, haga click para ir a la sección</p>
             </div>
             <div class="card card-events">
@@ -41,7 +41,7 @@
                     <img src="assets/images/highway.jpg">
                 </div>
                 <div class="card-body">
-                    <h3>Se analiza la colocación de reductores de velocidad y señalética en la vía a Loja.</h3>
+                    <p><small><strong>Hace 1 día</strong></small><br>Se analiza la colocación de reductores de velocidad y señalética en la vía a Loja.</p>
                 </div>
             </div>
             <div class="news-4">
@@ -50,7 +50,7 @@
                         <img src="assets/images/highway.jpg">
                     </div>
                     <div class="card-body">
-                        <h3>Se analiza la colocación de reductores de velocidad y señalética en la vía a Loja.</h3>
+                        <p><small><strong>Hace 1 día</strong></small><br>Se analiza la colocación de reductores de velocidad y señalética en la vía a Loja.</p>
                     </div>
                 </div>
                 <div class="news-card">
@@ -58,7 +58,7 @@
                         <img src="assets/images/highway.jpg">
                     </div>
                     <div class="card-body">
-                        <h3>Se analiza la colocación de reductores de velocidad y señalética en la vía a Loja.</h3>
+                        <p><small><strong>Hace 1 día</strong></small><br>Se analiza la colocación de reductores de velocidad y señalética en la vía a Loja.</p>
                     </div>
                 </div>
 
@@ -68,7 +68,8 @@
                         <img src="assets/images/highway.jpg">
                     </div>
                     <div class="card-body">
-                        <h3>Se analiza la colocación de reductores de velocidad y señalética en la vía a Loja.</h3>
+
+                        <p><small><strong>Hace 1 día</strong></small><br>Se analiza la colocación de reductores de velocidad y señalética en la vía a Loja.</p>
                     </div>
                 </div>
                 <div class="news-card">
@@ -76,51 +77,17 @@
                         <img src="assets/images/highway.jpg">
                     </div>
                     <div class="card-body">
-                        <h3>Se analiza la colocación de reductores de velocidad y señalética en la vía a Loja.</h3>
+                        <p><small><strong>Hace 1 día</strong></small><br>Se analiza la colocación de reductores de velocidad y señalética en la vía a Loja.</p>
                     </div>
                 </div>
             </div>
-            <!-- <div class="news-cards-4">
-              <div class="news-card-4">
-                  <div class="card-img">
-                      <img src="assets/images/highway.jpg">
-                  </div>
-                  <div class="card-body">
-                      <h3>Se analiza la colocación de reductores de velocidad y señalética en la vía a Loja.</h3>
-                  </div>
-              </div>
-              <div class="news-card-4">
-                  <div class="card-img">
-                      <img src="assets/images/highway.jpg">
-                  </div>
-                  <div class="card-body">
-                      <h3>Se analiza la colocación de reductores de velocidad y señalética en la vía a Loja.</h3>
-                  </div>
-              </div>
-              <div class="news-card-4">
-                  <div class="card-img">
-                      <img src="assets/images/highway.jpg">
-                  </div>
-                  <div class="card-body">
-                      <h3>Se analiza la colocación de reductores de velocidad y señalética en la vía a Loja.</h3>
-                  </div>
-              </div>
-              <div class="news-card-4">
-                  <div class="card-img">
-                      <img src="assets/images/highway.jpg">
-                  </div>
-                  <div class="card-body">
-                      <h3>Se analiza la colocación de reductores de velocidad y señalética en la vía a Loja.</h3>
-                  </div>
-              </div>
-          </div> -->
         </div>
     </section>
     <section class="magic">
         <h2>Somos pueblo mágico</h2>
         <div class="magic-content">
             <div class="magic-img">
-                <img src="assets/images/magico.png" alt="">
+                <img loading="lazy" src="assets/images/magico.png" alt="">
             </div>
             <div class="magic-text">
                 <p>(Loja) Mediante rueda de prensa el Alcalde de Calvas anuncio la obtención de la declaratoria de #PueblosMágicosEc programa emblemático de desarrollo turístico del Ministerio de Turismo. Para acceder esta categoría se debió cumplir con
