--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -4,7 +4,7 @@
     </div>
     <div class="navbar-wrapper">
         <a routerLink="/home" routerLinkActive="active">Inicio</a>
-        <a routerLink="/tramites/listing" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Trámites</a>
+        <a routerLink="/tramites" routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">Trámites</a>
         <a href="#">Sobre Calvas</a>
         <a href="#">Servicios</a>
     </div>
