--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -309,7 +309,7 @@ button.about {
     position: absolute;
     width: 100%;
     height: 6px;
-    top: 0;
+    top: -1px;
     z-index: 100;
 }
 
@@ -338,10 +338,10 @@ button.about {
 // End information
 // Latest news
 .latest-news {
-    height: 100vh;
+    height: 90vh;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
 }
 
@@ -358,7 +358,7 @@ button.about {
 }
 
 .news-card {
-    width: 45%;
+    width: 50%;
     height: auto;
     border: 1px solid rgba(100, 100, 111, .4);
     overflow: hidden;
@@ -380,7 +380,7 @@ button.about {
 }
 
 .news-4 .news-card {
-    width: 40%;
+    width: 50%;
 }
 
 .card button {
@@ -396,11 +396,12 @@ button.about {
     position: absolute;
     bottom: 0;
     z-index: 100;
+    width: 100%;
 }
 
-.card-body h3 {
+.card-body p {
     padding: 10px;
-    background-color: rgba(71, 71, 71, 0.7);
+    background-color: rgba(54, 54, 54, 0.7);
     width: 100%;
     color: #fff;
 }
@@ -420,32 +421,36 @@ button.about {
 // End Latest news
 // Magic
 .magic {
-    height: 100vh;
+    height: 90vh;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
-    // background-color: rgb(226, 226, 226);
 }
 
 .magic-content {
-    background: linear-gradient( rgba(39, 39, 61, 0.3), rgba(39, 39, 61, 0.3)), url('../../assets/images/letras-cariamanga.jpg') top -135px left 0 no-repeat;
     background-size: cover;
     height: 70vh;
-    width: 80%;
+    width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
     position: relative;
+    align-items: center;
+}
+
+.magic-img:hover {
+    transform: scale(1.1);
 }
 
 .magic-img {
-    width: 50%;
+    width: 40%;
     background-color: $primary;
     padding: 20px;
     position: absolute;
-    left: -100px;
+    left: 50px;
+    transform: scale(1);
+    transition: transform .5s;
+    box-shadow: 0px 0px 20px $primary;
 }
 
 .magic-img img {
@@ -453,14 +458,13 @@ button.about {
 }
 
 .magic-text {
-    width: 40%;
+    width: 50%;
     background-color: rgba(46, 46, 46, 0.7);
     color: #fff;
     padding: 30px;
-    align-self: flex-end;
     position: absolute;
-    right: 20px;
-    bottom: 142px;
+    right: 0px;
+    box-shadow: -2px 2px 20px 2px #6c7279;
 }
 
 // End Magic
