Improved authorities component and added laws component

--- a/src/app/city-hall/authorities/authorities.component.html
+++ b/src/app/city-hall/authorities/authorities.component.html
@@ -2,50 +2,77 @@
     <h1>Autoridades del municipio</h1>
     <hr>
     <section>
-        <div class="autoridades__alcaldes d-flex flex-row">
-            <div class="autoridades__alcalde_alcalde w-50 text-center">
-                <h3>Soc. Alex Sigifredo Padilla Torres</h3>
-                <h5>ALCALDE</h5>
-                <img src="http://www.gobiernocalvas.gob.ec/images/Autoridades/socalexpadilla.png" alt=""><br>
-                <a href="#" target="_blank">alex.padilla@gobiernocalvas.gob.ec</a>
-                <p>(07) 2687663 - 2687997 - 2687501 Ext. 102</p>
+        <div class="autoridades d-flex flex-row w-100">
+            <div class="autoridades__card text-center">
+                <div class="autoridades__card_img">
+                    <img src="http://www.gobiernocalvas.gob.ec/images/Autoridades/socalexpadilla.png" alt=""><br>
+
+                </div>
+                <div class="autoridades__card_text">
+                    <h3>Soc. Alex Sigifredo Padilla Torres</h3>
+                    <h5>ALCALDE</h5>
+                    <a href="#" target="_blank">alex.padilla@gobiernocalvas.gob.ec</a>
+                    <p>(07) 2687663 - 2687997 - 2687501 Ext. 102</p>
+                </div>
             </div>
-            <div class="autoridades__alcalde_vicealcalde w-50 text-center">
-                <h3>Soc. Alex Sigifredo Padilla Torres</h3>
-                <h5>VICEALCALDE</h5>
-                <img src="http://www.gobiernocalvas.gob.ec/images/Autoridades/ingadolfoimaicela.png" alt=""><br>
-                <a href="#" target="_blank">adolfo.imaicela@gobiernocalvas.gob.ec</a>
-                <p>(07) 2687663 - 2687997 - 2687501 Ext. 113</p>
+            <div class="autoridades__card text-center">
+                <div class="autoridades__card_img">
+                    <img src="http://www.gobiernocalvas.gob.ec/images/Autoridades/ingadolfoimaicela.png" alt=""><br>
+                </div>
+                <div class="autoridades__card_text">
+                    <h3>Ing. Adolfo Gilberto Imaicela Jumbo</h3>
+                    <h5>VICEALCALDE</h5>
+                    <a href="#" target="_blank">adolfo.imaicela@gobiernocalvas.gob.ec</a>
+                    <p>(07) 2687663 - 2687997 - 2687501 Ext. 113</p>
+                </div>
             </div>
         </div>
-        <div class="autoridades__consejales d-flex flex-row">
-            <div class="autoridades__alcalde_alcalde w-25 text-center">
-                <h3>Soc. Alex Sigifredo Padilla Torres</h3>
-                <h5>ALCALDE</h5>
-                <img src="http://www.gobiernocalvas.gob.ec/images/Autoridades/socalexpadilla.png" alt=""><br>
-                <a href="#" target="_blank">alex.padilla@gobiernocalvas.gob.ec</a>
-                <p>(07) 2687663 - 2687997 - 2687501 Ext. 102</p>
+        <div class="autoridades mt-4 d-flex flex-row w-100">
+            <div class="autoridades__card text-center">
+                <div class="autoridades__card_img">
+                    <img src="https://www.gobiernocalvas.gob.ec/images/Autoridades/ingvirmaniatroya.png" alt=""><br>
+                </div>
+                <div class="autoridades__card_text">
+                    <h3>Ing. Neli Virmania Troya Troya</h3>
+                    <h5>CONCEJALA</h5>
+                    <a href="#" target="_blank">virmania.troya@gobiernocalvas.gob.ec</a>
+                    <p>(07) 2687663 - 2687997 - 2687501 Ext. 102</p>
+                </div>
             </div>
-            <div class="autoridades__alcalde_vicealcalde w-25 text-center">
-                <h3>Soc. Alex Sigifredo Padilla Torres</h3>
-                <h5>VICEALCALDE</h5>
-                <img src="http://www.gobiernocalvas.gob.ec/images/Autoridades/ingadolfoimaicela.png" alt=""><br>
-                <a href="#" target="_blank">adolfo.imaicela@gobiernocalvas.gob.ec</a>
-                <p>(07) 2687663 - 2687997 - 2687501 Ext. 113</p>
+            <div class="autoridades__card  text-center">
+                <div class="autoridades__card_img">
+                    <img src="https://www.gobiernocalvas.gob.ec/images/Autoridades/ingjosecueva.png" alt=""><br>
+                </div>
+                <div class="autoridades__card_text">
+                    <h3>Ing. Jose Cueva Torres</h3>
+                    <h5>CONCEJAL</h5>
+                    <a href="#" target="_blank">adolfo.imaicela@gobiernocalvas.gob.ec</a>
+                    <p>(07) 2687663 - 2687997 - 2687501 Ext. 113</p>
+                </div>
             </div>
-            <div class="autoridades__alcalde_alcalde w-25 text-center">
-                <h3>Soc. Alex Sigifredo Padilla Torres</h3>
-                <h5>ALCALDE</h5>
-                <img src="http://www.gobiernocalvas.gob.ec/images/Autoridades/socalexpadilla.png" alt=""><br>
-                <a href="#" target="_blank">alex.padilla@gobiernocalvas.gob.ec</a>
-                <p>(07) 2687663 - 2687997 - 2687501 Ext. 102</p>
+        </div>
+        <div class="autoridades mt-4 mb-4 d-flex flex-row w-100">
+            <div class="autoridades__card text-center">
+                <div class="autoridades__card_img">
+                    <img src="https://www.gobiernocalvas.gob.ec/images/Autoridades/licoswaldobravo.png" alt=""><br>
+                </div>
+                <div class="autoridades__card_text">
+                    <h3>Lic. Oswaldo Bravo Ludeña</h3>
+                    <h5>CONCEJAL</h5>
+                    <a href="#" target="_blank">oswaldo.bravo@gobiernocalvas.gob.ec</a>
+                    <p>(07) 2687663 - 2687997 - 2687501 Ext. 102</p>
+                </div>
             </div>
-            <div class="autoridades__alcalde_vicealcalde w-25 text-center">
-                <h3>Soc. Alex Sigifredo Padilla Torres</h3>
-                <h5>VICEALCALDE</h5>
-                <img src="http://www.gobiernocalvas.gob.ec/images/Autoridades/ingadolfoimaicela.png" alt=""><br>
-                <a href="#" target="_blank">adolfo.imaicela@gobiernocalvas.gob.ec</a>
-                <p>(07) 2687663 - 2687997 - 2687501 Ext. 113</p>
+            <div class="autoridades__card text-center">
+                <div class="autoridades__card_img">
+                    <img src="https://www.gobiernocalvas.gob.ec/images/Autoridades/Ingfernandocueva.png" alt=""><br>
+                </div>
+                <div class="autoridades__card_text">
+                    <h3>Ing. Fernando Cueva Carrion</h3>
+                    <h5>CONCEJAL</h5>
+                    <a href="#" target="_blank">fernando.cueva@gobiernocalvas.gob.ec</a>
+                    <p>(07) 2687663 - 2687997 - 2687501 Ext. 113</p>
+                </div>
             </div>
         </div>
     </section>
