--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -5,7 +5,7 @@
     <div class="navbar-wrapper">
         <a routerLink="/home" routerLinkActive="active">Inicio</a>
         <a routerLink="/tramites" routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">Trámites</a>
-        <a href="#">Sobre Calvas</a>
+        <a routerLink="/municipio" routerLinkActive="active">Sobre Calvas</a>
         <a href="#">Servicios</a>
     </div>
     <div class="social-media">
