--- a/src/app/formalities/listing-formalities/listing-formalities.component.html
+++ b/src/app/formalities/listing-formalities/listing-formalities.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid">
     <h1>Guia de Tramites y Servicios</h1>
     <div class="accordion" id="accordionExample">
         <div class="accordion-item">
